--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -39,8 +39,14 @@
 
     <div class="span9 span-fixed-sidebar">
       <div class="hero-unit">
-        <h2>Hi I'm Seosamh</h2>
-        <p>...the founder/developer of 100 Motels. This section of the site is for people who are interested in delving a bit deeper into the detail of this project. Maybe you're looking at hiring me or maybe you're interested in getting involved somehow.</p>
+        <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
+          <p class="pull-right">
+            <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
+          </p>
+          <br>
+        <hr>
+        <h2>Hi I'm Seosamh </h2>
+        <p>...the founder/developer of 100 Motels. The side-bar to the left has all the details about the idea and how I've implementated it. So it's a good place to look if you're thinking of hiring me or maybe getting involved in the project somehow.</p>
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
       <div class="row-fluid">
