--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -210,12 +210,12 @@
 							<ul class="nav nav-list">
 			          <li class="nav-header">How it Works</li>
 			          <li class="divider"></li>
-			          <li class=""><a href="#">Organizing >></a></li>
-			          <li class=""><a href="#">Funding >></a></li>
-			          <li class=""><a href="#">Touring  >></a></li>
-			          <li class=""><a href="#">Supporting >></a></li>
-			          <li class=""><a href="#">Attending >></a></li>
-			          <li class=""><a href="#">Payment >></a></li>
+			          <li class=""><a href="#">Organizing </a></li>
+			          <li class=""><a href="#">Funding </a></li>
+			          <li class=""><a href="#">Touring  </a></li>
+			          <li class=""><a href="#">Supporting </a></li>
+			          <li class=""><a href="#">Attending </a></li>
+			          <li class=""><a href="#">Payment </a></li>
 			          <li class="divider"></li>
 			        </ul>
 			        <div class="btn-group center">
