--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,9 +1,7 @@
-<div class="container-fluid">
-  <div class="row-fluid row">
+<div class="container">
+  <div class="row">
     <div class="span3">
-      <div class="well sidebar-nav-fixed">
-        <ul class="nav nav-list">
-
+        <ul class="nav nav-list affix-top" data-spy="affix" data-offset-top="20">
           <li class="nav-header">About the Founder</li>
 
           <li class="active"><a href="#">personal info</a></li>
@@ -34,10 +32,8 @@
           <li><a href="#">Privacy</a></li>
           <li><a href="#">Terms of Service</a></li>
         </ul>
-      </div><!--/.well -->
     </div><!--/span-->
-
-    <div class="span9 span-fixed-sidebar">
+    <div class="span9">
       <div class="hero-unit">
         <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
           <p class="pull-right">
@@ -90,7 +86,5 @@
       </div><!--/row-->
     </div><!--/span-->
   </div><!--/row-->
-
   <hr>
-
-</div><!--/.fluid-container-->​
+</div><!--/container-->​
