--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="span3">
-        <ul class="nav nav-list affix-top" data-spy="affix" data-offset-top="20">
+  <div class="row-fluid">
+    <div class="span3 well">
+        <ul class="nav nav-list" data-offset-top="20">
           <li class="nav-header">About the Founder</li>
 
           <li class="active"><a href="#">personal info</a></li>
