--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,90 +1,61 @@
-<div class="container">
-  <div class="row-fluid">
-    <div class="span3 well">
-        <ul class="nav nav-list" data-offset-top="20">
+<!-- <div class="container"> -->
+  <div class="row">
+    <div class="span3">
+      <div class="well" data-spy="affix" data-offset-top="50">
+        <ul class="nav nav-list" >
           <li class="nav-header">About the Founder</li>
 
-          <li class="active"><a href="#">personal info</a></li>
+          <li class="#"><a href="#">personal info</a></li>
           <li><a href="#">WIP</a></li>
           <li><a href="#">hiring</a></li>
           <li><a href="#">github</a></li>
           <li><a href="#">blog</a></li>
           <li class="nav-header">About 100 Motels</li>
 
-          <li><a href="#">Music</a></li>
           <li><a href="#">Funding</a></li>
           <li><a href="#">Revenue</a></li>
           <li><a href="#">Promoter info</a></li>
           <li><a href="#">Artist info</a></li>
-          <li><a href="#">Ticket info</a></li>
 
           <li class="nav-header">Technical info</li>
           <li><a href="#">Development</a></li>
           <li><a href="#">Testing</a></li>
           <li><a href="#">Security</a></li>
-          <li><a href="#">Deployment</a></li>
-          <li><a href="#">API</a></li>
-          <li><a href="#">Doorman mobile app</a></li>
-          <li><a href="#">Stripe App API</a></li>
 
           <li class="nav-header">Customer info</li>
           <li><a href="#">Legal</a></li>
           <li><a href="#">Privacy</a></li>
           <li><a href="#">Terms of Service</a></li>
         </ul>
-    </div><!--/span-->
+      </div> <!-- /well -->
+    </div>
     <div class="span9">
-      <div class="hero-unit">
-        <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
-          <p class="pull-right">
-            <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
-          </p>
-          <br>
-        <hr>
-        <h2>Hi I'm Seosamh </h2>
-        <p>...the founder/developer of 100 Motels. The side-bar to the left has all the details about the idea and how I've implementated it. So it's a good place to look if you're thinking of hiring me or maybe getting involved in the project somehow.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
-      <div class="row-fluid">
-
-        <div class="span4">
-          <h2>Project status</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!--/span-->
-        <div class="span4">
-          <h2>How I test</h2>
-
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!--/span-->
-        <div class="span4">
-          <h2>Doorman</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-
-        </div><!--/span-->
-      </div><!--/row-->
-      <div class="row-fluid">
-        <div class="span4">
-          <h2>Accessing the API</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-
-        </div><!--/span-->
-        <div class="span4">
-          <h2>Stripe integration</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!--/span-->
-        <div class="span4">
-
-          <h2>Edge Rails</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!--/span-->
-      </div><!--/row-->
+      <!-- 100 Motels poster -->
+      <section id="intro">
+        <div class="hero-unit">
+          <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
+            <p class="pull-right">
+              <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
+            </p>
+            <br>
+          <hr>
+          <h2>Hi I'm Seosamh </h2>
+          <p>...the founder/developer of 100 Motels. The side-bar to the left has all the details about the idea and how I've implementated it. So it's a good place to look if you're thinking of hiring me or maybe getting involved in the project somehow.</p>
+          <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+        </div>
+      </section>
+      <!-- The Big IDea -->
+      <section id="idea">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
     </div><!--/span-->
   </div><!--/row-->
   <hr>
-</div><!--/container-->​
+<!-- </div>/container​ -->
