running assets compile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 body { padding-top: 60px; }
 
 @import "bootstrap_and_overrides";
+@import "bootstrap-responsive";
 @import "layout";
 @import "pages";
 @import "email";
