--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,7 +1,7 @@
-<!-- <div class="container"> -->
+<div class="container">
   <div class="row">
     <div class="span3">
-      <div class="well" data-spy="affix" data-offset-top="50">
+      <div class="well" data-spy="affix" data-offset-top="10" data-offset-bottom="350">
         <ul class="nav nav-list" >
           <li class="nav-header">About the Founder</li>
 
@@ -58,4 +58,4 @@
     </div><!--/span-->
   </div><!--/row-->
   <hr>
-<!-- </div>/container​ -->
+</div> <!-- /container​ -->
