--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -35,9 +35,15 @@
 
 // info
 
-.span3 {
-    min-height: 1px;
-  .well {
-     min-width: 240px;
-  }
+.sidebar-nav-fixed {
+    // padding: 9px 0;
+    position:fixed;
+    // left:20px;
+    top:60px;
+    width:250px;
+    bottom: 550px;
+}
+
+.row-fluid > .span-fixed-sidebar {
+    margin-left: 290px;
 }
