--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row">
+  <div class="row-fluid">
     <div class="span3">
-      <div class="well" data-spy="affix" data-offset-top="10" data-offset-bottom="350">
-        <ul class="nav nav-list" >
+      <div class="sidebar-nav-fixed " >
+        <ul class="nav nav-list well " >
           <li class="nav-header">About the Founder</li>
 
           <li class="#"><a href="#">personal info</a></li>
