there is hope for mercury

--- a/app/views/layouts/mercury.html.erb
+++ b/app/views/layouts/mercury.html.erb
@@ -15,7 +15,7 @@
       // Instantiate the PageEditor
       new Mercury.PageEditor(saveUrl, {
         saveStyle:  'form', // 'form', or 'json' (default json)
-        saveMethod: 'POST', // 'PUT', or 'POST', (create, vs. update -- default PUT)
+        saveMethod: null, // 'PUT', or 'POST', (create, vs. update -- default PUT)
         visible:    true  // boolean - if the interface should start visible or not
       });
     </script>
