--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="span3">
 			<% if user_signed_in? && current_user == @event.profile.user %>
-				<%= link_to "Edit Your Event", "/editor" + request.path, id: "edit_link", data: {save_url: mercury_update_event_path(@event) }, class: "btn" %>
+				<%= link_to "Edit Your Event", "/editor" + request.path, id: "edit_link", class: "btn" %>
 			<% elsif @event.users.include?(current_user) %>
 				<button class="btn btn-success">Support Requested <i class="icon-check icon-white"></i></button>
 			<% elsif user_signed_in? %>
