--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -250,7 +250,7 @@
 								<p><strong>Anyone...excepting Artists.</strong> </p>
 								<br>
 								<p>Artists can do three things on 100 Motels: Add a playlist of their music; make a tour request; make a support request. If they end up playing a show, everything bar the performance will be taken care of by the organizer. It's just like the pro's, except you don't have to make commercial music to play.<strong> You will never pay to play.</strong></p> <br>
-							  <p>Anyone who has a credit card can organize, but it will be controlled until the service matures. The first organizers will be radio hosts, bloggers and other proven contributers to music without profit who naturally command a crowd, like the examples in this demo (all people who I discovered through my music).</p> <br>
+							  <p>Anyone who has a credit card can organize, but it will be controlled until the service matures. The first organizers will be radio hosts, bloggers and other proven contributers to music without profit who naturally command a crowd. Check out the organizers in this demo, all people who I discovered through my music.</p> <br>
 								<p>Along with offloading the organizational burden from the artist there were two other pillar issues that precipitated the idea for 100 Motels: Risk and Attendance. You can organize or fund a 100 Motels show without incurring any costs. A successful campaign is always realised in terms of attaining a target attendance. </p> <br>
 								<p>Follow the adjacent links for more info or for the full details of the implementation <%= link_to "go here.", info_path %></p>
 							</blockquote>
