why is devise behaving strangely?

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
                   <dt>Current Card</dt>
                   <dd>
                     <% if @user.customer_id %>
-                      ####-####-####-<%= @user.last4 %>
+                      <%= @user.type %> #<%= @user.last4 %>, Exp: <%= @user.exp_month %>/<%= @user.exp_year %>
                     <% else %>
                       none provided
                     <% end %>
