--- a/app/views/promoter/profiles/show.html.erb
+++ b/app/views/promoter/profiles/show.html.erb
@@ -1,12 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="span12">
-      <div class="alert" align="center">
-        <%= "Your Profile is currently visible" if @profile.visible? %>
-      </div>
       <% if user_signed_in? && current_user.profile == @profile %>
-        <%#= link_to "Show Editor", "/editor" + request.path, id: "edit_link", class: "btn btn-large" %>
-        <%= link_to "Edit Profile", edit_promoter_profile_path(@profile), class: 'btn' %>
+        <%= link_to "Show Editor", "/editor" + request.path, id: "edit_link", class: "btn btn-large" %>
       <% elsif user_signed_in? && current_user.promoters.where("event_id IS NULL").include?(@profile.user) %>
         <button class="btn btn-success">Tour Requested <i class="icon-check icon-white"></i></button>
       <% elsif user_signed_in? %>
@@ -29,11 +25,9 @@
       <div class="span3 offset2" align="center">
         <div class="page-header">
           <h2>
-            <% if @profile.promoter_name? %>
-              <%= @profile.promoter_name %>
-            <% else %>
-              <%= @user.name  %>
-            <% end %>
+            <div id="name" data-mercury="full">
+              <%= @profile.promoter_name || "Promoter Name" %>
+            </div>
           </h2>
         </div>
         <h4><p class="muted"><%= @profile.user.location.city %>, <%= @profile.user.location.country %></p></h4>
@@ -61,9 +55,9 @@
               <dt>Joined: </dt>
               <dd><%= time_ago_in_words(@user.confirmed_at) %> ago</dd>
               <dt>Availability: </dt>
-              <dd><%= @profile.available %></dd>
+              <dd id="available" data-mercury="full"><%= @profile.available %></dd>
               <dt>Fee: </dt>
-              <dd><%= @profile.fee %></dd>
+              <dd id="fee" data-mercury="full"><%= @profile.fee %></dd>
             </dl>
           </fieldset>
         </div>
@@ -110,19 +104,19 @@
       <div class="span5">
         <div class="tabbable tabs-below">
           <ul class="nav nav-tabs">
-            <li class="active"><a href="#about-me" data-toggle="tab">About Me</a></li>
+            <li class="active"><a href="#about" data-toggle="tab">About Me</a></li>
             <li><a href="#equipment" data-toggle="tab">Equipment</a></li>
             <li><a href="#venues" data-toggle="tab">Venues</a></li>
-            <li><a href="#getting-here" data-toggle="tab">Getting here</a></li>
-            <li><a href="#accom" data-toggle="tab">Accomodation</a></li>
+            <li><a href="#travel" data-toggle="tab">Getting here</a></li>
+            <li><a href="#accomodation" data-toggle="tab">Accomodation</a></li>
             <li><a href="#history" data-toggle="tab">Current & Past Shows</a></li>
             <li><a href="#support" data-toggle="tab">Local Support</a></li>
           </ul>
         </div>
         <div class="tab-content">
-          <div class="tab-pane active tour-content" id="about-me">
+          <div class="tab-pane active tour-content" id="about" data-mercury="full">
             <% if @profile.about? %>
-              <%= @profile.about %>
+              <%= raw @profile.about %>
             <% else %>
               <p>This is where you can talk about your attitude and commitment to music and musicians. Why do you want to put on shows? What do you hope to get it out of it, what motivates you?</p>
 
@@ -136,35 +130,35 @@
               <p lead><%= @user.name %></p>
             <% end %>
           </div>
-          <div class="tab-pane" id="equipment">
+          <div class="tab-pane" id="equipment" data-mercury="full">
             <% if @profile.equipment? %>
-              <%= @profile.equipment %>
+              <%= raw @profile.equipment %>
             <% else %>
               <p>What sort of bands do you cater for? Can you hand large ensembles with specific needs equipment wise? If so will this cost, do you borrow, how do you source music gear?</p>
               <p>A lot of bands for smaller shows will be traveling with light, instruments only. They may also tailor the size of the touring band based on what the promoter can offer.</p>
             <% end %>
           </div>
-          <div class="tab-pane" id="venues">
+          <div class="tab-pane" id="venues" data-mercury="full">
             <% if @profile.venues? %>
-              <%= @profile.venues %>
+              <%= raw @profile.venues %>
             <% else %>
               <p>Tell us about the venue/ venues you use. Have you played them yourself? Do they book late shows? What are they, your house, a barn, a club? If links exist then link them and don't forget to puts pics and/or video in the media section opposite</p>
               <p>There's also the technical side of it, backlines, sound, engineers, whatever you think is relevant.</p>
               <p>If you're using a music club we expect them to pay up you based on ticket sales and likely bar takings. We also expect them to allow some kind of rider for the artist, whatever way they want to work it.</p>
             <% end %>
           </div>
-          <div class="tab-pane" id="getting-here">
+          <div class="tab-pane" id="travel" data-mercury="full">
             <% if @profile.travel? %>
-              <%= @profile.travel %>
+              <%= raw @profile.travel %>
             <% else %>
               <p>General advice about airports and ground transport is essential, especially when trying to work out a budget for the show.</p>
               <p>Which airlines to use, is there a cheap time to come to your city, general tips and hints about hauling gear or not? You should know all this from experience but the artist probably won't.</p>
               <p>Another important consideration for international artists is the visa / immigration situation.</p>
             <% end %>
           </div>
-          <div class="tab-pane" id="accom">
+          <div class="tab-pane" id="accomodation" data-mercury="full">
             <% if @profile.accomodation? %>
-              <%= @profile.accomodation %>
+              <%= raw @profile.accomodation %>
             <% else %>
               <p>We should aim slightly higher than couchsurf but as long as you offer some kind of definite accomodation or offer to organize it than good enough. Couches, hostels or hotels, free or priced into the show, the follow throught is what's important.</p>
               <p> Leaving bands roofless after a show or any other music industry type behaviour will not be tolerated!</p>
@@ -192,10 +186,10 @@
                 <% end %>
               </tbody>
             </table>
-           </div>
-          <div class="tab-pane" id="support">
+          </div>
+          <div class="tab-pane" id="support" data-mercury="full">
             <% if @profile.support? %>
-              <%= @profile.support %>
+              <%= raw @profile.support %>
             <% else %>
               <p>Usually support will be local which is good for providing gear and bumping up the attendance.</p>
               <p> So this would be a good place to talk about local bands and to link to our list the ones you use for support. Maybe the touring artist will have a preference?</p>
