some aesthetic adjustments

--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -19,7 +19,7 @@
   <div class="row-fluid row">
     <div class="span4">
       <h4>Recent Updates</h4>
-      <div class="well sidebar-nav-fixed" id="update">
+      <div class="well sidebar-nav-fixed" id="update-menu">
         <ul class="nav nav-list">
           <li class="nav-header">Today's Sales </li>
           <% @sales.each do |s| %>
