--- a/app/assets/stylesheets/promoter/base.css.scss
+++ b/app/assets/stylesheets/promoter/base.css.scss
@@ -7,3 +7,13 @@
     width: 700px;
     margin-left: -400px; /* - width/2 */
 }
+
+.fill {
+  height: 100%;
+  min-height: 350px;
+}
+
+#update-menu  {
+  height: 100%;
+  min-height: 350px;
+}
