--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,32 +1,54 @@
-<div class="row">
-  <div class="span2">
-    <p><%= link_to "Back", promoter_root_path, class: "btn btn-large" %></p>
+<div class="fill container">
+  <div class="row">
+    <div class="span3"><p class="lead">Your Current Requests</p></div>
+    <div class="span1">
+      <p><%= link_to "Home", promoter_root_path, class: "btn btn-block" %></p>
+    </div>
+    <div class="span1">
+      <div class="btn-group">
+        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+          Action
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="">Mark Read</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
-  <div class="span12">
-
-        <table class="table" id="requests">
-          <thead>
-            <tr>
-              <th>Support / Tour</th>
-              <th>Requested</th>
-              <th>Name</th>
-              <th>Email</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @requests.each do |request| %>
+  <hr>
+  <div class="row">
+    <div class="span12">
+          <table class="table" id="requests">
+            <thead>
               <tr>
-                <td><%= request.event ? Event.find(request.event_id).artist : "Tour Requested"  %></td>
-                <td><%= distance_of_time_in_words_to_now(request.created_at, include_seconds = false) %> ago</td>
-                <td><%= request.user.name %></td>
-                <td><%= request.user.email %></td>
-                <td><%= request.state %></td>
-                <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{request.user.media_html}"} %></td>
+                <th>
+                  <button type="button" id="check_all", class="btn btn-mini">
+                    <i class="icon-ok"></i>
+                  </button>
+                </th>
+                <th>Support / Tour</th>
+                <th>Requested</th>
+                <th>Name</th>
+                <th>Email</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% @requests.each do |request| %>
+                <tr>
+                  <td><%= check_box_tag "request_ids[]", request.id %> </td>
+                  <td><%= request.event ? Event.find(request.event_id).artist : "Tour Requested"  %></td>
+                  <td><%= distance_of_time_in_words_to_now(request.created_at, include_seconds = false) %> ago</td>
+                  <td><%= request.user.name %></td>
+                  <td><%= request.user.email %></td>
+                  <td><span class="label"><%= request.state %></span></td>
+                  <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{request.user.media_html}"} %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
 
+    </div>
   </div>
 </div>
 <div class="modal large hide fade" id="preview-modal">
