create a public namespace for promoter profiles and locked down backedn to god and promoters only

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             <ul class="nav">
               <li class=""><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
-              <li><%= link_to "Promoters", promoter_profiles_path %></li>
+              <li><%= link_to "Promoters", profiles_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
             </ul>
             <%= render 'events/search' %>
