--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -38,15 +38,9 @@
 
 // info
 
-// .sidebar-nav-fixed {
-//     // padding: 9px 0;
-//     position:fixed;
-//     // left:20px;
-//     top:60px;
-//     width:250px;
-//     bottom: 550px;
-// }
-
-// .row-fluid > .span-fixed-sidebar {
-//     margin-left: 290px;
-// }
+#intro {
+  img  {
+    // padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+}
