--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -192,12 +192,12 @@
 							<ul class="nav nav-list">
 			          <li class="nav-header">How it Works</li>
 			          <li class="divider"></li>
-			          <li class=""><a href="#">Organizing </a></li>
-			          <li class=""><a href="#">Funding </a></li>
-			          <li class=""><a href="#">Touring  </a></li>
-			          <li class=""><a href="#">Supporting </a></li>
-			          <li class=""><a href="#">Attending </a></li>
-			          <li class=""><a href="#">Payment </a></li>
+			          <li><%= link_to "Organizing", info_path(anchor: "organizing") %></li>
+			          <li><%= link_to "Funding", info_path(anchor: "funding") %></li>
+			          <li><%= link_to "Touring", info_path(anchor: "touring") %></li>
+			          <li><%= link_to "Supporting", info_path(anchor: "supporting") %></li>
+			          <li><%= link_to "Attending", info_path(anchor: "attending") %></li>
+			          <br>
 			          <li class="divider"></li>
 			        </ul>
 			        <div class="btn-group center">
