--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -32,29 +32,49 @@
     <div class="span9">
       <!-- 100 Motels poster -->
       <section id="intro">
-        <div class="hero-unit">
+        <div class="">
           <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
-            <p class="pull-right">
+            <p class="pull-right img-circle">
               <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
             </p>
             <br>
-          <hr>
-          <h2>Hi I'm Seosamh </h2>
-          <p>...the founder/developer of 100 Motels. The side-bar to the left has all the details about the idea and how I've implementated it. So it's a good place to look if you're thinking of hiring me or maybe getting involved in the project somehow.</p>
-          <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+          <h2>Hi I'm Seosamh Cahill. <span class="muted">I developed 100 Motels.</span></h2>
+          <p class="lead">My experience in music has inspired me to try and change some things, and this is my first cut at it. The focus of 100 Motels is live musical performance, specifically touring. If you're curious about my background, my thoughts on music, development or anything else check out <a href="//seocahill.com">my blog</a>.  </p>
         </div>
       </section>
       <!-- The Big IDea -->
-      <section id="idea">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </section>
+      <!-- <div class="container marketing"> -->
+
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider">
+
+        <div class="featurette">
+          <img class="featurette-image pull-right img-circle" src="//placehold.it/200">
+          <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="featurette">
+          <img class="featurette-image pull-left img-circle" src="//placehold.it/200">
+          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="featurette">
+          <img class="featurette-image pull-right img-circle" src="//placehold.it/200">
+          <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- /END THE FEATURETTES -->
+      <!-- </div> -->
     </div><!--/span-->
   </div><!--/row-->
   <hr>
