--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -38,8 +38,8 @@
               <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
             </p>
             <br>
-          <h2>Hi I'm Seosamh Cahill. <span class="muted">I developed 100 Motels.</span></h2>
-          <p class="lead">My experience in music has inspired me to try and change some things, and this is my first cut at it. The focus of 100 Motels is live musical performance, specifically touring. If you're curious about my background, my thoughts on music, development or anything else check out <a href="//seocahill.com">my blog</a>.  </p>
+          <h3>Hi I'm Seosamh Cahill. <span class="muted">I developed 100 Motels.</span></h2>
+          <p class="lead">My experience in music has inspired me to try and change some things, and this is my first cut at it. The focus of 100 Motels is live musical performance, specifically touring. If you're curious about my background, my thoughts on music, web development or anything else check out <a href="//seocahill.com">my blog</a>.  </p>
         </div>
       </section>
       <!-- The Big IDea -->
@@ -47,18 +47,17 @@
 
         <!-- START THE FEATURETTES -->
 
-        <hr class="featurette-divider">
-
         <div class="featurette">
-          <img class="featurette-image pull-right img-circle" src="//placehold.it/200">
-          <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
+          <!-- <img class="featurette-image pull-right img-circle" src="//placehold.it/200"> -->
+          <%= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
+          <div class="page-header"><h1 class="featurette-heading">What's the problem? </h1></div>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <div class="featurette">
-          <img class="featurette-image pull-left img-circle" src="//placehold.it/200">
+          <%= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
@@ -66,7 +65,7 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-          <img class="featurette-image pull-right img-circle" src="//placehold.it/200">
+          <%= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
