--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,16 +26,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <%= link_to "100 Motels", root_path, class: "brand" %>
+          <%= link_to image_tag('ic_launcher.png') + "100 Motels", root_path, class: "brand brand-center" %>
+          <%#{}= image_tag "ic_launcher.png", class: "brand" %>
           <div class="nav-collapse">
-            <ul class="nav">
+            <ul class="nav topbar" id="">
               <li class=""><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
               <li><%= link_to "Promoters", profiles_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
+              <li><%= render 'events/search' %></li>
             </ul>
-            <%= render 'events/search' %>
-            <ul class="nav pull-right">
+            <ul class="nav pull-right topbar">
               <% unless user_signed_in? %>
                 <li><%= link_to "Sign up", new_user_registration_path %></li>
                 <li><%= link_to "Sign in", new_user_session_path %></li>
